app/30-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-frontend
spec:
  defaultBackend:
    service:
      name: sa-frontend-lb
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sa-frontend-lb
                port:
                  number: 80
